--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ var x = setInterval(function() {
   }
 }, 1000);
 </script>
-<img src="https://firebasestorage.googleapis.com/v0/b/smplupdw.appspot.com/o/IMG-20200626-WA0027.jpg?alt=media&token=36cf4271-3e10-4b9b-806c-23007713073e" alt="Refresh" width="500" height="333"/>
+		<center>
+<img src="https://firebasestorage.googleapis.com/v0/b/smplupdw.appspot.com/o/IMG-20200626-WA0027.jpg?alt=media&token=36cf4271-3e10-4b9b-806c-23007713073e" alt="Refresh" width="500" height="333"/></center>
 	</body>
 </html>
