--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <html>
-	<head>
+	<head style=>
 		<title>Happy Birthday Subbu</title>
 	</head>
 	<body>
-		<h2 style="text-align:center">Happy Birthday Subbu In Advance 🎉🎊.</h2>
-<p id="demo" style="text-align:center"></p>
+		<h2 style="text-align:center;color:#4dff4d;">Happy Birthday Subbu In Advance 🎉🎊.</h2>
+<h3 id="demo" style="text-align:center;color:blue;font-size:300%;"></h3>
+<div id="parent">
+   <div class="message">Happy Birthday</div>
+   <div class="message">Party</div>
+   <div class="message">Eeayhaa</div>
+</div>
 
 <script>
 // Set the date we're counting down to
@@ -36,7 +41,46 @@ var x = setInterval(function() {
   }
 }, 1000);
 </script>
-		<center>
+<center>
 <img src="https://firebasestorage.googleapis.com/v0/b/smplupdw.appspot.com/o/IMG-20200626-WA0027.jpg?alt=media&token=36cf4271-3e10-4b9b-806c-23007713073e" alt="Refresh" width="500" height="333"/></center>
-	</body>
+<style>
+#parent {
+	position: relative;
+	width: 400px;
+	height: 100vh;
+	overflow: hidden;
+}
+.message {
+	position:absolute;
+	left: 0;
+	bottom: -120px;
+	height: 120px;
+	width: 120px;
+	background-color: orange;
+	color: white;
+	line-height: 115px;
+	text-align: center;
+	font-family: Arial, sans-serif;
+	font-weight: bold;
+	border-radius: 60px;
+	animation: move 6s infinite linear;
+}
+.message:nth-child(2){
+	left:120px;
+	animation-delay: 2s;
+}
+.message:nth-child(3){
+	left:240px;
+	animation-delay: 4s;
+}
+@keyframes move {
+	0% {
+		bottom: -120px;
+	}
+	100% {
+		bottom: 100%;
+	}
+}
+</style>	
+</body>
 </html>
