--- a/index.html
+++ b/index.html
@@ -1,86 +1,65 @@
-<html>
-	<head style=>
-		<title>Happy Birthday Subbu</title>
-	</head>
-	<body>
-		<h2 style="text-align:center;color:#4dff4d;">Happy Birthday Subbu In Advance 🎉🎊.</h2>
-<h3 id="demo" style="text-align:center;color:blue;font-size:300%;"></h3>
-<div id="parent">
-   <div class="message">Happy Birthday</div>
-   <div class="message">Party</div>
-   <div class="message">Eeayhaa</div>
-</div>
+var palette = ["#eb4d4b", "#badc58", "#f9ca24", "#22a6b3"];
 
-<script>
-// Set the date we're counting down to
-var countDownDate = new Date("Jun 27, 2021 01:01:01").getTime();
-
-// Update the count down every 1 second
-var x = setInterval(function() {
-
-  // Get today's date and time
-  var now = new Date().getTime();
-
-  // Find the distance between now and the count down date
-  var distance = countDownDate - now;
-
-  // Time calculations for days, hours, minutes and seconds
-  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-  // Display the result in the element with id="demo"
-  document.getElementById("demo").innerHTML = days + "d " + hours + "h "
-  + minutes + "m " + seconds + "s ";
-
-  // If the count down is finished, write some text
-  if (distance < 0) {
-    clearInterval(x);
-    document.getElementById("demo").innerHTML = "Happy Birthday Subbu";
-  }
-}, 1000);
-</script>
-<center>
-<img src="https://firebasestorage.googleapis.com/v0/b/smplupdw.appspot.com/o/IMG-20200626-WA0027.jpg?alt=media&token=36cf4271-3e10-4b9b-806c-23007713073e" alt="Refresh" width="500" height="333"/></center>
-<style>
-#parent {
-	position: relative;
-	width: 400px;
-	height: 100vh;
-	overflow: hidden;
+function random(min = 0, max = 10) {
+ return Math.floor(Math.random() * (max - min + 1)) + min;
 }
-.message {
-	position:absolute;
-	left: 0;
-	bottom: -120px;
-	height: 120px;
-	width: 120px;
-	background-color: orange;
-	color: white;
-	line-height: 115px;
-	text-align: center;
-	font-family: Arial, sans-serif;
-	font-weight: bold;
-	border-radius: 60px;
-	animation: move 6s infinite linear;
+
+function generateColor() {
+ let index = random(0, palette.length - 1);
+ return palette[index];
 }
-.message:nth-child(2){
-	left:120px;
-	animation-delay: 2s;
+
+function cleanUp(el) {
+ while (el.firstChild) {
+  el.removeChild(el.firstChild);
+ }
 }
-.message:nth-child(3){
-	left:240px;
-	animation-delay: 4s;
+
+function partyTime() {
+ // remove exisiting elements before creaitng new ones
+ const container = document.querySelector(".living-room");
+ cleanUp(container);
+
+ let numberOfBalloons = (window.innerWidth / 80) * 3;
+
+ for (var i = 0; i < numberOfBalloons; i++) {
+  const template = document.querySelector("template").content.cloneNode(true);
+
+  let thisColor = generateColor();
+  let transform = {
+   rotate: Math.floor(random(-15, 15) * 1.25) + "deg",
+   translateX: random(-window.innerWidth / 2, window.innerWidth / 2) + "px",
+   translateY: random(-100, 100) + "px"
+  };
+
+  template.querySelector(".helium").style.transform = Object.keys(transform)
+   .map((prop) => `${prop}(${transform[prop]})`)
+   .join(" ");
+  template.querySelector(".balloon").style.background = thisColor;
+  template.querySelector(".knot").style.borderBottomColor = thisColor;
+
+  container.appendChild(document.importNode(template, true));
+ }
+
+ document.querySelectorAll(".helium").forEach((e) =>
+  e.addEventListener("click", function (ev) {
+   Object.assign(ev.target.style, {
+    width: `.${random(50, 75)}rem`,
+    height: "3px",
+    transform: `translateY(${
+     window.innerHeight * 0.9
+    }px) skew(20deg,0deg) rotate(${random(0, 100)}deg)`,
+    transition: "transform 1s ease-out"
+   });
+   ev.target.classList.add("popped");
+
+   ev.target.querySelector(".string").style.opacity = 0;
+   ev.target.querySelector(".knot").style.borderBottomWidth = "3px";
+   ev.target.querySelector(".knot").style.animationPlayState = "paused";
+  })
+ );
 }
-@keyframes move {
-	0% {
-		bottom: -120px;
-	}
-	100% {
-		bottom: 100%;
-	}
-}
-</style>	
-</body>
-</html>
+
+document.querySelector(".refresh").addEventListener("click", partyTime);
+
+partyTime(document.querySelector(".living-room"));
