--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
-	<head style=>
-		<title>Happy Birthday Subbu</title>
+	<head>
+		<title>HBD Subbu</title>
 	</head>
 	<body>
-		<h2 style="text-align:center;color:#4dff4d;">Happy Birthday Subbu In Advance 🎉🎊.</h2>
-<h3 id="demo" style="text-align:center;color:blue;font-size:300%;"></h3>
+		<h2 style="text-align:center;color:#f50d05;font-size:300%;">Happy Birthday Subbu In Advance 🎉🎊.</h2>
+<h3 id="demo" style="text-align:center;color:blue;font-size:400%;"></h3>
 <script>
 // Set the date we're counting down to
 var countDownDate = new Date("Jun 27, 2021 01:01:01").getTime();
