--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@ var x = setInterval(function() {
 }, 1000);
 </script>
 <center>
-<img src="https://firebasestorage.googleapis.com/v0/b/smplupdw.appspot.com/o/IMG-20200626-WA0027.jpg?alt=media&token=36cf4271-3e10-4b9b-806c-23007713073e" alt="Refresh" width="500" height="333"/></center>	
+<img src="https://firebasestorage.googleapis.com/v0/b/smplupdw.appspot.com/o/IMG-20200626-WA0027.jpg?alt=media&token=36cf4271-3e10-4b9b-806c-23007713073e" alt="Refresh" width="500" height="333"/></center>
+		<video width="320" height="240" controls>
+  <source src="https://firebasestorage.googleapis.com/v0/b/smplupdw.appspot.com/o/VID-20210624-WA0009.mp4?alt=media&token=60fb6d34-dab4-4d59-ae1d-25511d7c7741" type="video/mp4">
+Your browser does not support the video tag.
+</video>
 </body>
 </html>
