--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ div.central {
   margin: 0 auto;
   width: 400px; <!--this value must be larger than both videos + padding etc-->
 }
+	<h3 id="demo" style="text-align:center;color:blue;font-size:400%;"></h3>
 </style>
 </body>
 </html>
