--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@ div.central {
   width: 400px; <!--this value must be larger than both videos + padding etc-->
 }
 </style>
-		<h3 id="demo" style="text-align:center;color:blue;font-size:400%;"></h3>
+		<h4 style="text-align:center;color:blue;font-size:400%;"></h4>
 </body>
 </html>
