--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title>HBD Subbu</title>
 	</head>
 	<body>
-		<h2 style="text-align:center;color:#f50d05;font-size:300%;font-family: 'Roboto';">Happy Birthday Subbu In Advance 🎉🎊.</h2>
+		<h2 style="text-align:center;color:#f50d05;font-size:300%;font-family: 'Roboto';">Happy Birthday Subbu in Advance 🎉🎊.</h2>
 <h3 id="demo" style="text-align:center;color:blue;font-size:400%;"></h3>
 <script>
 // Set the date we're counting down to
